# fluxdi

./: .gitignore  .release.toml  BRANCHING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: CI.yml  quality.yml
docs/: book.toml
docs/src/: SUMMARY.md  async-and-mixed.md  decorators.md  derive-macros.md  examples.md  getting-started.md  graph-tooling.md  introduction.md  migration-from-sadi.md  modules-and-lifecycle.md  observability.md  performance.md  production-patterns.md  providers-and-resolution.md  web-integrations.md
examples/actix/: Cargo.toml
examples/actix/src/: main.rs
examples/async-factory/: Cargo.toml
examples/async-factory/src/: main.rs
examples/axum/: Cargo.toml  test.sh
examples/axum-lifecycle/: Cargo.toml
examples/axum-lifecycle/src/: main.rs
examples/axum/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/complex/: Cargo.toml
examples/complex/src/: main.rs
examples/complex/src/infra/di/: mod.rs  repositories.rs  use_cases.rs
examples/complex/src/infra/persistence/sqlite/: client.rs
examples/complex/src/infra/persistence/sqlite/repository/: todo_sqlite.rs  user_sqlite.rs
examples/decorator/: Cargo.toml
examples/decorator/src/: main.rs
examples/dual-http-random-port/: Cargo.toml
examples/dual-http-random-port/src/: main.rs
examples/graph-tooling/: Cargo.toml
examples/graph-tooling/src/: main.rs
examples/injectable-macro/: Cargo.toml
examples/injectable-macro/src/: main.rs
examples/module-async/: Cargo.toml
examples/module-async/src/: main.rs
examples/module-mixed-sync-async/: Cargo.toml
examples/module-mixed-sync-async/src/: main.rs
examples/module-sync/: Cargo.toml
examples/module-sync/src/: main.rs
examples/multi-binding-pipeline/: Cargo.toml
examples/multi-binding-pipeline/src/: main.rs
examples/named-bindings/: Cargo.toml
examples/named-bindings/src/: main.rs
examples/scoped-context/: Cargo.toml
examples/scoped-context/src/: main.rs
examples/seaorm-sqlite/: Cargo.toml
examples/seaorm-sqlite/src/: main.rs
fluxdi/: Cargo.toml  README.md
fluxdi-macros/: Cargo.toml  README.md
fluxdi-macros/src/: lib.rs
fluxdi/benches/: injector_baseline.rs
fluxdi/src/: actix.rs  application.rs  axum.rs  dynamic.rs  error.rs  graph.rs  injector.rs  instance.rs  lib.rs  module.rs  observability.rs  provider.rs  resolve_guard.rs  runtime.rs  scope.rs
fluxdi/src/application/: accessors.rs  constructors.rs  lifecycle.rs  mod.rs  module_loading.rs  options.rs
fluxdi/src/application/tests/: bootstrap_and_lifecycle.rs  mod.rs  state_and_structure.rs
fluxdi/src/error/: tests.rs
fluxdi/src/injector/: async_factory_tests.rs  core_lifecycle.rs  dynamic_tests.rs  eager_resolution_tests.rs  graph_state.rs  graph_validation.rs  mod.rs  nts_instance_factory.rs  nts_provider_lookup.rs  nts_registration.rs  nts_resolve_async.rs  nts_resolve_sync.rs  nts_storage.rs  ts_dynamic.rs  ts_instance_factory.rs  ts_provider_lookup.rs  ts_registration.rs  ts_resolve_async.rs  ts_resolve_eager.rs  ts_resolve_sync.rs  ts_storage_read.rs  ts_storage_write.rs
fluxdi/src/instance/: accessors.rs  constructors.rs  mod.rs
fluxdi/src/instance/tests/: advanced.rs  basic.rs  mod.rs
fluxdi/src/module/: mod.rs  tests.rs  trait_non_thread_safe.rs  trait_thread_safe.rs
fluxdi/src/observability/: opentelemetry.rs
fluxdi/src/provider/: constructors_non_thread_safe_async.rs  constructors_non_thread_safe_sync.rs  constructors_thread_safe_async.rs  constructors_thread_safe_sync.rs  limiter_acquire.rs  limiter_release.rs  limiter_types.rs  mod.rs  provider_common.rs  provider_debug.rs  provider_type.rs
fluxdi/src/provider/tests/: decorator.rs  factories_and_threading.rs  mod.rs  scopes.rs
fluxdi/tests/: actix_integration.rs  graph_tooling.rs  injectable_macro.rs  multi_bindings.rs  named_bindings.rs  observability_logging.rs  observability_metrics.rs  observability_opentelemetry.rs  observability_tracing.rs  override_provider.rs  resource_limits.rs  scoped_context.rs
roadmaps/: FLUXDI_V1_2_TO_V1_4.md  LOCK_FREE_OPERATIONS.md  OBSERVABILITY.md  RESOURCE_LIMIT.md
