[workspace]
members = ["fluxdi", "fluxdi-macros", "examples/*"]
default-members = ["fluxdi"]
resolver = "2"

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[workspace.package]
version = "1.2.1"
edition = "2024"
repository = "https://github.com/DaiYuANg/fluxdi"
homepage = "https://github.com/DaiYuANg/fluxdi"
license-file = "LICENSE"
authors = ["João Pedro Martins <mjoaopedro61@gmail.com>"]
