[package]
name = "axum-lifecycle"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
fluxdi = { path = "../../fluxdi", features = ["axum"] }

